tests/lean/423.lean
universe u

#check fun {T : Sort u} (a : T) => a + 0
